cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_465.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/ectest.c:2055: error: DEAD_STORE
  The value written to &p_next (type ec_parameters_st**) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/test/ectest.c:2055:13: Write of unused value
2053.           || !TEST_true(EC_GROUP_set_generator(tmpg, group_gen, group_order,
2054.                                                group_cofactor))
2055.           || !TEST_ptr(other_params = *p_next++ =
                    ^
2056.                        EC_GROUP_get_ecparameters(tmpg, NULL))
2057.           || !TEST_ptr(tgroup = *g_next++ =
